variables.Variables.scala.code
var nbPas:int = 0
var dejaFait:int = 0

while (!estSurBiscuit()) {
  avance()
  nbPas += 1
}

while (nbPas!=dejaFait) {
  recule()
  dejaFait +=1
}